--- a/app/src/main/res/layout/activity_search_page.xml
+++ b/app/src/main/res/layout/activity_search_page.xml
@@ -20,55 +20,109 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
+
+            <TextView
+                android:id="@+id/fav_county"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Favorite Counties"
+                android:textSize="16dp"
+                android:layout_marginStart="30dp"
+                android:layout_marginTop="20dp"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent"/>
+
+            <EditText
+                android:id="@+id/fav_input"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:ems="10"
+                android:textSize="14dp"
+                android:inputType="textPersonName"
+                android:hint="County Name"
+                app:layout_constraintTop_toBottomOf="@+id/fav_county"
+                app:layout_constraintStart_toStartOf="@id/fav_county"/>
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/fav_county_list"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                app:layout_constraintTop_toBottomOf="@id/fav_input"
+                app:layout_constraintStart_toStartOf="@id/fav_input"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginEnd="30dp">
+
+            </androidx.recyclerview.widget.RecyclerView>
+
+            <TextView
+                android:id="@+id/search_county"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="County"
+                android:textSize="16dp"
+                android:layout_marginTop="20dp"
+                app:layout_constraintTop_toBottomOf="@id/fav_county_list"
+                app:layout_constraintStart_toStartOf="@id/fav_county_list"/>
+
+            <EditText
+                android:id="@+id/search_county_input"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:ems="10"
+                android:inputType="textPersonName"
+                android:hint="County Name"
+                android:textSize="14dp"
+                app:layout_constraintTop_toBottomOf="@id/search_county"
+                app:layout_constraintStart_toStartOf="@id/search_county"/>
+
+            <TextView
+                android:id="@+id/date"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Date"
+                android:textSize="16dp"
+                app:layout_constraintTop_toBottomOf="@id/search_county_input"
+                app:layout_constraintStart_toStartOf="@id/search_county_input"/>
+
+            <EditText
+                android:id="@+id/date_input"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:ems="10"
+                android:inputType="date"
+                android:textSize="14dp"
+                app:layout_constraintTop_toBottomOf="@id/date"
+                app:layout_constraintStart_toStartOf="@id/date"/>
+
+            <Button
+                android:id="@+id/search_button"
+                android:layout_width="80dp"
+                android:layout_height="32dp"
+                android:layout_marginStart="30dp"
+                android:text="Search"
+                android:textSize="10dp"
+                app:layout_constraintStart_toEndOf="@id/date_input"
+                app:layout_constraintTop_toTopOf="@id/date_input" />
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/result_list"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                app:layout_constraintTop_toBottomOf="@+id/date_input"
+                app:layout_constraintStart_toStartOf="@id/date_input"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginEnd="30dp"/>
+
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
 
-    <LinearLayout
-        android:id="@id/menu_bar"
+    <include
+        layout="@layout/menu_bar"
         android:layout_width="match_parent"
         android:layout_height="70dp"
-        android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent">
-
-        <ImageButton
-            android:id="@+id/menu_articles"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            tools:srcCompat="@tools:sample/backgrounds/scenic" />
-
-        <ImageButton
-            android:id="@+id/menu_search"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            tools:srcCompat="@tools:sample/backgrounds/scenic" />
-
-        <ImageButton
-            android:id="@+id/menu_main"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            tools:srcCompat="@tools:sample/backgrounds/scenic" />
-
-        <ImageButton
-            android:id="@+id/menu_friends"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            tools:srcCompat="@tools:sample/backgrounds/scenic" />
-
-        <ImageButton
-            android:id="@+id/menu_wildfire_adding"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            tools:srcCompat="@tools:sample/backgrounds/scenic" />
-
-
-
-    </LinearLayout>
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
