--- a/app/src/main/res/layout/activity_friends_page.xml
+++ b/app/src/main/res/layout/activity_friends_page.xml
@@ -18,10 +18,46 @@
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="match_parent">
+
+            <EditText
+                android:id="@+id/friend_name"
+                android:textSize="14dp"
+                android:inputType="textPersonName"
+                android:hint="  Friend Name"
+
+                android:background="@drawable/box_red"
+                android:layout_width="0dp"
+                android:layout_height="40dp"
+
+                android:layout_marginTop="5dp"
+                android:layout_marginEnd="10dp"
+                android:layout_marginStart="10dp"
+
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"/>
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/fav_county_list"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:background="@drawable/box_green"
+
+                android:layout_marginTop="5dp"
+                android:layout_marginBottom="10dp"
+
+                app:layout_constraintTop_toBottomOf="@+id/friend_name"
+                app:layout_constraintStart_toStartOf="@+id/friend_name"
+                app:layout_constraintEnd_toEndOf="@+id/friend_name"
+                app:layout_constraintBottom_toBottomOf="parent">
+
+            </androidx.recyclerview.widget.RecyclerView>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
+
     </ScrollView>
+
     <include
         android:id="@+id/menu_bar"
         layout="@layout/menu_bar"
