--- a/app/src/main/res/layout/activity_search_page.xml
+++ b/app/src/main/res/layout/activity_search_page.xml
@@ -18,101 +18,171 @@
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent">
 
-
-            <TextView
-                android:id="@+id/fav_county"
-                android:layout_width="wrap_content"
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/constraint_layout1"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Favorite Counties"
-                android:textSize="16dp"
-                android:layout_marginStart="30dp"
+                android:layout_marginStart="20dp"
                 android:layout_marginTop="20dp"
+                android:layout_marginEnd="20dp"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintStart_toStartOf="parent"/>
-
-            <EditText
-                android:id="@+id/fav_input"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:ems="10"
-                android:textSize="14dp"
-                android:inputType="textPersonName"
-                android:hint="County Name"
-                app:layout_constraintTop_toBottomOf="@+id/fav_county"
-                app:layout_constraintStart_toStartOf="@id/fav_county"/>
-
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/fav_county_list"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                app:layout_constraintTop_toBottomOf="@id/fav_input"
-                app:layout_constraintStart_toStartOf="@id/fav_input"
+                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                android:layout_marginEnd="30dp">
+                android:background="@drawable/box">
 
-            </androidx.recyclerview.widget.RecyclerView>
+                <TextView
+                    android:id="@+id/fav_county"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="  Favorite Counties"
+                    android:textSize="16dp"
+                    android:layout_marginStart="10dp"
+                    android:layout_marginTop="10dp"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"/>
 
-            <TextView
-                android:id="@+id/search_county"
-                android:layout_width="wrap_content"
+                <EditText
+                    android:id="@+id/fav_input"
+                    android:textSize="14dp"
+                    android:inputType="textPersonName"
+                    android:hint="  County Name"
+
+                    android:background="@drawable/box_red"
+                    android:layout_width="0dp"
+                    android:layout_height="40dp"
+
+                    android:layout_marginTop="5dp"
+                    android:layout_marginEnd="10dp"
+                    android:layout_marginStart="10dp"
+                    app:layout_constraintTop_toBottomOf="@+id/fav_county"
+                    app:layout_constraintStart_toStartOf="@id/constraint_layout1"
+                    app:layout_constraintEnd_toEndOf="@id/constraint_layout1"/>
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/fav_county_list"
+                    android:layout_width="0dp"
+                    android:layout_height="200dp"
+                    android:background="@drawable/box_green"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginBottom="10dp"
+                    android:layout_marginEnd="10dp"
+                    app:layout_constraintTop_toBottomOf="@id/fav_input"
+                    app:layout_constraintStart_toStartOf="@id/fav_input"
+                    app:layout_constraintEnd_toEndOf="@+id/constraint_layout1"
+                    app:layout_constraintBottom_toBottomOf="@+id/constraint_layout1">
+
+                </androidx.recyclerview.widget.RecyclerView>
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/constraint_layout2"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="County"
-                android:textSize="16dp"
+                android:layout_marginStart="20dp"
                 android:layout_marginTop="20dp"
-                app:layout_constraintTop_toBottomOf="@id/fav_county_list"
-                app:layout_constraintStart_toStartOf="@id/fav_county_list"/>
-
-            <EditText
-                android:id="@+id/search_county_input"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:ems="10"
-                android:inputType="textPersonName"
-                android:hint="County Name"
-                android:textSize="14dp"
-                app:layout_constraintTop_toBottomOf="@id/search_county"
-                app:layout_constraintStart_toStartOf="@id/search_county"/>
-
-            <TextView
-                android:id="@+id/date"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Date"
-                android:textSize="16dp"
-                app:layout_constraintTop_toBottomOf="@id/search_county_input"
-                app:layout_constraintStart_toStartOf="@id/search_county_input"/>
-
-            <EditText
-                android:id="@+id/date_input"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:ems="10"
-                android:inputType="date"
-                android:textSize="14dp"
-                app:layout_constraintTop_toBottomOf="@id/date"
-                app:layout_constraintStart_toStartOf="@id/date"/>
-
-            <Button
-                android:id="@+id/search_button"
-                android:layout_width="80dp"
-                android:layout_height="32dp"
-                android:layout_marginStart="30dp"
-                android:text="Search"
-                android:textSize="10dp"
-                app:layout_constraintStart_toEndOf="@id/date_input"
-                app:layout_constraintTop_toTopOf="@id/date_input" />
-
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/result_list"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                app:layout_constraintTop_toBottomOf="@+id/date_input"
-                app:layout_constraintStart_toStartOf="@id/date_input"
+                android:layout_marginEnd="20dp"
+                app:layout_constraintTop_toBottomOf="@id/constraint_layout1"
+                app:layout_constraintStart_toStartOf="@id/constraint_layout1"
                 app:layout_constraintEnd_toEndOf="parent"
-                android:layout_marginEnd="30dp"/>
+                android:background="@drawable/box">
 
+                <TextView
+                    android:id="@+id/search_county"
+
+                    android:text="  County"
+                    android:textSize="16dp"
+
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+
+                    android:layout_marginStart="10dp"
+                    android:layout_marginTop="10dp"
+
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"/>
+
+                <EditText
+                    android:id="@+id/search_county_input"
+                    android:inputType="textPersonName"
+
+                    android:hint="  County Name"
+                    android:textSize="14dp"
+
+                    android:background="@drawable/box_red"
+                    android:layout_width="0dp"
+                    android:layout_height="40dp"
+
+                    android:layout_marginTop="5dp"
+                    android:layout_marginEnd="10dp"
+                    android:layout_marginStart="10dp"
+
+                    app:layout_constraintTop_toBottomOf="@+id/search_county"
+                    app:layout_constraintStart_toStartOf="@id/constraint_layout2"
+                    app:layout_constraintEnd_toEndOf="@id/constraint_layout2"/>
+
+                <TextView
+                    android:id="@+id/date"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+
+                    android:text="  Date"
+                    android:textSize="16dp"
+
+                    android:layout_marginTop="5dp"
+                    android:layout_marginStart="10dp"
+
+                    app:layout_constraintTop_toBottomOf="@id/search_county_input"
+                    app:layout_constraintStart_toStartOf="parent"/>
+
+                <EditText
+                    android:id="@+id/date_input"
+                    android:inputType="date"
+                    android:textSize="14dp"
+
+                    android:background="@drawable/box_red"
+                    android:layout_width="0dp"
+                    android:layout_height="40dp"
+
+                    android:layout_marginTop="5dp"
+                    android:layout_marginEnd="10dp"
+                    android:layout_marginStart="10dp"
+
+                    app:layout_constraintTop_toBottomOf="@+id/date"
+                    app:layout_constraintStart_toStartOf="@id/constraint_layout2"
+                    app:layout_constraintEnd_toStartOf="@id/search_button"/>
+
+                <Button
+                    android:id="@+id/search_button"
+                    android:layout_width="80dp"
+                    android:layout_height="40dp"
+
+                    android:layout_marginEnd="10dp"
+                    android:backgroundTint="#FF6700"
+
+                    android:text="Search"
+                    android:textColor="#000000"
+                    android:textSize="10dp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="@id/date_input" />
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/result_list"
+                    android:layout_width="0dp"
+                    android:layout_height="150dp"
+                    android:background="@drawable/box_green"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginBottom="10dp"
+                    android:layout_marginEnd="10dp"
+                    app:layout_constraintTop_toBottomOf="@id/date_input"
+                    app:layout_constraintStart_toStartOf="@id/date_input"
+                    app:layout_constraintEnd_toEndOf="@+id/constraint_layout2"
+                    app:layout_constraintBottom_toBottomOf="@+id/constraint_layout2"/>
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
 
