--- a/app/src/main/res/layout/activity_wildfire_adding_page.xml
+++ b/app/src/main/res/layout/activity_wildfire_adding_page.xml
@@ -20,6 +20,139 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
+
+            <TextView
+                android:id="@+id/search_county"
+
+                android:text="  County"
+                android:textSize="16dp"
+
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="10dp"
+
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent"/>
+
+            <EditText
+                android:id="@+id/search_county_input"
+                android:inputType="textPersonName"
+
+                android:hint="  County Name"
+                android:textSize="14dp"
+
+                android:background="@drawable/box_red"
+                android:layout_width="0dp"
+                android:layout_height="40dp"
+
+                android:layout_marginTop="5dp"
+                android:layout_marginEnd="10dp"
+                android:layout_marginStart="10dp"
+
+                app:layout_constraintTop_toBottomOf="@+id/search_county"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"/>
+
+            <TextView
+                android:id="@+id/date"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+
+                android:text="  Date"
+                android:textSize="16dp"
+
+                android:layout_marginTop="5dp"
+                android:layout_marginStart="10dp"
+
+                app:layout_constraintTop_toBottomOf="@id/search_county_input"
+                app:layout_constraintStart_toStartOf="parent"/>
+
+            <EditText
+                android:id="@+id/date_input"
+                android:inputType="date"
+                android:textSize="14dp"
+
+                android:background="@drawable/box_green"
+                android:layout_width="0dp"
+                android:layout_height="40dp"
+
+                android:layout_marginTop="5dp"
+                android:layout_marginEnd="10dp"
+                android:layout_marginStart="10dp"
+
+                app:layout_constraintTop_toBottomOf="@+id/date"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toStartOf="@id/search_button"/>
+
+            <ImageButton
+                android:id="@+id/button_calendar"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+
+                android:layout_marginStart="16dp"
+                app:layout_constraintStart_toEndOf="@+id/date_input"
+                app:layout_constraintTop_toTopOf="@+id/date_input"
+                android:src="@drawable/ic_android_calendar" />
+
+            <TextView
+                android:id="@+id/time"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+
+                android:text="  Time"
+                android:textSize="16dp"
+
+                android:layout_marginTop="5dp"
+                android:layout_marginStart="10dp"
+
+                app:layout_constraintTop_toBottomOf="@id/date_input"
+                app:layout_constraintStart_toStartOf="parent"/>
+
+            <EditText
+                android:id="@+id/time_input"
+                android:inputType="date"
+                android:textSize="14dp"
+
+                android:background="@drawable/box_red"
+                android:layout_width="0dp"
+                android:layout_height="40dp"
+
+                android:layout_marginTop="5dp"
+                android:layout_marginEnd="10dp"
+                android:layout_marginStart="10dp"
+
+                app:layout_constraintTop_toBottomOf="@+id/time"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toStartOf="@id/search_button"/>
+
+            <ImageButton
+                android:id="@+id/button_clock"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+
+                android:layout_marginStart="16dp"
+                app:layout_constraintStart_toEndOf="@+id/time_input"
+                app:layout_constraintTop_toTopOf="@+id/time_input"
+                android:src="@drawable/ic_android_clock" />
+
+            <Button
+                android:id="@+id/search_button"
+                android:layout_width="80dp"
+                android:layout_height="40dp"
+
+                android:layout_marginTop="30dp"
+                android:layout_marginEnd="10dp"
+                android:backgroundTint="#FF6700"
+
+                android:text="Search"
+                android:textColor="#000000"
+                android:textSize="10dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/time_input" />
+
+
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
 
