Articles page is upgraded

--- a/app/src/main/res/layout/activity_articles_page.xml
+++ b/app/src/main/res/layout/activity_articles_page.xml
@@ -31,23 +31,11 @@
                 android:layout_marginEnd="10dp"
                 android:inputType="textPersonName" />
 
-
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/article_list"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@drawable/box_green"
+                android:layout_height="match_parent" />
 
-                android:layout_marginTop="5dp"
-                android:layout_marginStart="10dp"
-                android:layout_marginEnd="10dp"
-                android:layout_marginBottom="10dp"
-
-                app:layout_constraintTop_toBottomOf="@+id/search_bar"
-
-                app:layout_constraintBottom_toBottomOf="parent">
-
-            </androidx.recyclerview.widget.RecyclerView>
 
         </LinearLayout>
     </ScrollView>
