--- a/app/src/main/res/layout/activity_search_page.xml
+++ b/app/src/main/res/layout/activity_search_page.xml
@@ -85,16 +85,14 @@
                 android:layout_marginStart="20dp"
                 android:layout_marginTop="20dp"
                 android:layout_marginEnd="20dp"
-                app:layout_constraintTop_toBottomOf="@id/constraint_layout1"
-                app:layout_constraintStart_toStartOf="@id/constraint_layout1"
+                android:background="@drawable/box"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                android:background="@drawable/box">
+                app:layout_constraintStart_toStartOf="@id/constraint_layout1"
+                app:layout_constraintTop_toBottomOf="@id/constraint_layout1">
 
                 <TextView
                     android:id="@+id/search_county"
-
-                    android:text="  County"
-                    android:textSize="16dp"
 
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -102,58 +100,61 @@
                     android:layout_marginStart="10dp"
                     android:layout_marginTop="10dp"
 
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"/>
+                    android:text="  County"
+                    android:textSize="16dp"
+
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
 
                 <EditText
                     android:id="@+id/search_county_input"
-                    android:inputType="textPersonName"
-
-                    android:hint="  County Name"
-                    android:textSize="14dp"
-
-                    android:background="@drawable/box_red"
                     android:layout_width="0dp"
+
                     android:layout_height="40dp"
+                    android:layout_marginStart="10dp"
 
                     android:layout_marginTop="5dp"
                     android:layout_marginEnd="10dp"
-                    android:layout_marginStart="10dp"
+                    android:background="@drawable/box_red"
 
-                    app:layout_constraintTop_toBottomOf="@+id/search_county"
+                    android:hint="  County Name"
+                    android:inputType="textPersonName"
+                    android:textSize="14dp"
+
+                    app:layout_constraintEnd_toEndOf="@id/constraint_layout2"
                     app:layout_constraintStart_toStartOf="@id/constraint_layout2"
-                    app:layout_constraintEnd_toEndOf="@id/constraint_layout2"/>
+                    app:layout_constraintTop_toBottomOf="@+id/search_county" />
 
                 <TextView
                     android:id="@+id/date"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
 
+                    android:layout_marginStart="10dp"
+                    android:layout_marginTop="5dp"
+
                     android:text="  Date"
                     android:textSize="16dp"
 
-                    android:layout_marginTop="5dp"
-                    android:layout_marginStart="10dp"
-
-                    app:layout_constraintTop_toBottomOf="@id/search_county_input"
-                    app:layout_constraintStart_toStartOf="parent"/>
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/search_county_input" />
 
                 <EditText
                     android:id="@+id/date_input"
-                    android:inputType="date"
-                    android:textSize="14dp"
-
-                    android:background="@drawable/box_red"
                     android:layout_width="0dp"
                     android:layout_height="40dp"
 
+                    android:layout_marginStart="10dp"
                     android:layout_marginTop="5dp"
                     android:layout_marginEnd="10dp"
-                    android:layout_marginStart="10dp"
 
-                    app:layout_constraintTop_toBottomOf="@+id/date"
+                    android:background="@drawable/box_red"
+                    android:inputType="date"
+                    android:textSize="14dp"
+
+                    app:layout_constraintEnd_toStartOf="@id/search_button"
                     app:layout_constraintStart_toStartOf="@id/constraint_layout2"
-                    app:layout_constraintEnd_toStartOf="@id/search_button"/>
+                    app:layout_constraintTop_toBottomOf="@+id/date" />
 
                 <Button
                     android:id="@+id/search_button"
@@ -173,14 +174,14 @@
                     android:id="@+id/result_list"
                     android:layout_width="0dp"
                     android:layout_height="150dp"
-                    android:background="@drawable/box_green"
                     android:layout_marginTop="5dp"
-                    android:layout_marginBottom="10dp"
                     android:layout_marginEnd="10dp"
-                    app:layout_constraintTop_toBottomOf="@id/date_input"
-                    app:layout_constraintStart_toStartOf="@id/date_input"
+                    android:layout_marginBottom="10dp"
+                    android:background="@drawable/box_green"
+                    app:layout_constraintBottom_toBottomOf="@+id/constraint_layout2"
                     app:layout_constraintEnd_toEndOf="@+id/constraint_layout2"
-                    app:layout_constraintBottom_toBottomOf="@+id/constraint_layout2"/>
+                    app:layout_constraintStart_toStartOf="@id/date_input"
+                    app:layout_constraintTop_toBottomOf="@id/date_input" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
         </androidx.constraintlayout.widget.ConstraintLayout>
