--- a/app/src/main/res/layout/activity_main_menu.xml
+++ b/app/src/main/res/layout/activity_main_menu.xml
@@ -2,84 +2,87 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+
     tools:context=".MainMenuActivity">
 
     <ScrollView
         android:id="@+id/scroll_view"
+
         android:layout_width="0dp"
         android:layout_height="0dp"
+
         app:layout_constraintBottom_toTopOf="@+id/menu_bar"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0">
+        app:layout_constraintTop_toTopOf="parent">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
-            <ImageButton
+            <!--ImageButton
                 android:id="@+id/button_settings"
+                android:src="@drawable/ic_android_settings"
+
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                android:layout_marginEnd="16dp"
-                android:src="@drawable/ic_android_settings"
+
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toTopOf="parent"
+
+                android:layout_marginTop="16dp"
+                android:layout_marginEnd="16dp" /-->
 
             <TextView
                 android:id="@+id/not_hist_title"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-
                 android:background="@drawable/box_red"
                 android:text=" Notification History "
                 android:textSize="16sp"
+
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
 
                 app:layout_constraintBottom_toTopOf="@+id/not_hist"
                 app:layout_constraintStart_toStartOf="@id/not_hist" />
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/not_hist"
+                android:background="@drawable/box_green"
 
                 android:layout_width="320dp"
                 android:layout_height="200dp"
-                android:layout_marginStart="45dp"
 
-                android:layout_marginTop="80dp"
-                android:layout_marginEnd="45dp"
-
-                android:background="@drawable/box_green"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toTopOf="parent"
 
+                android:layout_marginStart="45dp"
+                android:layout_marginTop="80dp"
+                android:layout_marginEnd="45dp"/>
 
             <TextView
                 android:id="@+id/daily_wildf_title"
-
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-
-                android:layout_marginTop="20dp"
-
                 android:background="@drawable/box_red"
                 android:text=" Daily Wildfires "
                 android:textSize="16sp"
 
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+
                 app:layout_constraintLeft_toLeftOf="@id/not_hist"
-                app:layout_constraintTop_toBottomOf="@id/not_hist" />
+                app:layout_constraintTop_toBottomOf="@id/not_hist"
+
+                android:layout_marginTop="20dp"/>
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/daily_wildf"
+                android:background="@drawable/box_green"
 
                 android:layout_width="315dp"
                 android:layout_height="303dp"
-                android:background="@drawable/box_green"
 
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="@+id/not_hist"
@@ -93,11 +96,12 @@
     <include
         android:id="@+id/menu_bar"
         layout="@layout/menu_bar"
+
         android:layout_width="match_parent"
         android:layout_height="70dp"
+
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
