--- a/app/src/main/res/layout/activity_search_page.xml
+++ b/app/src/main/res/layout/activity_search_page.xml
@@ -2,15 +2,19 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+
     tools:context=".SearchPageActivity">
 
 
     <ScrollView
         android:id="@+id/scroll_view"
+
         android:layout_width="match_parent"
         android:layout_height="0dp"
+
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toTopOf="@id/menu_bar"
         app:layout_constraintStart_toStartOf="parent"
@@ -19,31 +23,38 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent">
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/constraint_layout1"
+                android:background="@drawable/box"
+
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="20dp"
-                android:layout_marginTop="20dp"
-                android:layout_marginEnd="20dp"
+
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                android:background="@drawable/box">
+
+                android:layout_marginStart="20dp"
+                android:layout_marginTop="20dp"
+                android:layout_marginEnd="20dp">
 
                 <TextView
                     android:id="@+id/fav_county"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
                     android:text="  Favorite Counties"
                     android:textSize="16dp"
-                    android:layout_marginStart="10dp"
-                    android:layout_marginTop="10dp"
+
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+
                     app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"/>
+                    app:layout_constraintStart_toStartOf="parent"
+
+                    android:layout_marginStart="10dp"
+                    android:layout_marginTop="10dp"/>
 
                 <EditText
                     android:id="@+id/fav_input"
@@ -52,136 +63,150 @@
                     android:hint="  County Name"
 
                     android:background="@drawable/box_red"
+
                     android:layout_width="0dp"
                     android:layout_height="40dp"
 
-                    android:layout_marginTop="5dp"
-                    android:layout_marginEnd="10dp"
-                    android:layout_marginStart="10dp"
                     app:layout_constraintTop_toBottomOf="@+id/fav_county"
                     app:layout_constraintStart_toStartOf="@id/constraint_layout1"
-                    app:layout_constraintEnd_toEndOf="@id/constraint_layout1"/>
+                    app:layout_constraintEnd_toEndOf="@id/constraint_layout1"
+
+                    android:layout_marginTop="5dp"
+                    android:layout_marginEnd="10dp"
+                    android:layout_marginStart="10dp"/>
 
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/friend_list"
+                    android:background="@drawable/box_green"
+
                     android:layout_width="0dp"
                     android:layout_height="200dp"
-                    android:background="@drawable/box_green"
-                    android:layout_marginTop="5dp"
-                    android:layout_marginBottom="10dp"
-                    android:layout_marginEnd="10dp"
+
                     app:layout_constraintTop_toBottomOf="@id/fav_input"
                     app:layout_constraintStart_toStartOf="@id/fav_input"
                     app:layout_constraintEnd_toEndOf="@+id/constraint_layout1"
-                    app:layout_constraintBottom_toBottomOf="@+id/constraint_layout1">
+                    app:layout_constraintBottom_toBottomOf="@+id/constraint_layout1"
+
+                    android:layout_marginTop="5dp"
+                    android:layout_marginBottom="10dp"
+                    android:layout_marginEnd="10dp">
 
                 </androidx.recyclerview.widget.RecyclerView>
             </androidx.constraintlayout.widget.ConstraintLayout>
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/constraint_layout2"
+                android:background="@drawable/box"
+
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="20dp"
-                android:layout_marginTop="20dp"
-                android:layout_marginEnd="20dp"
-                android:background="@drawable/box"
+
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="@id/constraint_layout1"
-                app:layout_constraintTop_toBottomOf="@id/constraint_layout1">
+                app:layout_constraintTop_toBottomOf="@id/constraint_layout1"
+
+                android:layout_marginStart="20dp"
+                android:layout_marginTop="20dp"
+                android:layout_marginEnd="20dp">
 
                 <TextView
                     android:id="@+id/search_county"
+                    android:text="  County"
+                    android:textSize="16dp"
 
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
 
-                    android:layout_marginStart="10dp"
-                    android:layout_marginTop="10dp"
-
-                    android:text="  County"
-                    android:textSize="16dp"
-
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
+                    app:layout_constraintTop_toTopOf="parent"
+
+                    android:layout_marginStart="10dp"
+                    android:layout_marginTop="10dp"/>
 
                 <EditText
                     android:id="@+id/search_county_input"
-                    android:layout_width="0dp"
-
-                    android:layout_height="40dp"
-                    android:layout_marginStart="10dp"
-
-                    android:layout_marginTop="5dp"
-                    android:layout_marginEnd="10dp"
-                    android:background="@drawable/box_red"
-
                     android:hint="  County Name"
                     android:inputType="textPersonName"
                     android:textSize="14dp"
 
+                    android:background="@drawable/box_red"
+
+                    android:layout_width="0dp"
+                    android:layout_height="40dp"
+
                     app:layout_constraintEnd_toEndOf="@id/constraint_layout2"
                     app:layout_constraintStart_toStartOf="@id/constraint_layout2"
-                    app:layout_constraintTop_toBottomOf="@+id/search_county" />
+                    app:layout_constraintTop_toBottomOf="@+id/search_county"
+
+                    android:layout_marginStart="10dp"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginEnd="10dp"/>
 
                 <TextView
                     android:id="@+id/date"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-
-                    android:layout_marginStart="10dp"
-                    android:layout_marginTop="5dp"
-
                     android:text="  Date"
                     android:textSize="16dp"
 
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/search_county_input" />
+                    app:layout_constraintTop_toBottomOf="@id/search_county_input"
+
+                    android:layout_marginStart="10dp"
+                    android:layout_marginTop="5dp"/>
 
                 <EditText
                     android:id="@+id/date_input"
-                    android:layout_width="0dp"
-                    android:layout_height="40dp"
-
-                    android:layout_marginStart="10dp"
-                    android:layout_marginTop="5dp"
-                    android:layout_marginEnd="10dp"
-
-                    android:background="@drawable/box_red"
                     android:inputType="date"
                     android:textSize="14dp"
 
+                    android:background="@drawable/box_red"
+
+                    android:layout_width="0dp"
+                    android:layout_height="40dp"
+
                     app:layout_constraintEnd_toStartOf="@id/search_button"
                     app:layout_constraintStart_toStartOf="@id/constraint_layout2"
-                    app:layout_constraintTop_toBottomOf="@+id/date" />
+                    app:layout_constraintTop_toBottomOf="@+id/date"
+
+                    android:layout_marginStart="10dp"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginEnd="10dp"/>
 
                 <Button
                     android:id="@+id/search_button"
-                    android:layout_width="80dp"
-                    android:layout_height="40dp"
-
-                    android:layout_marginEnd="10dp"
-                    android:backgroundTint="#FF6700"
-
                     android:text="Search"
                     android:textColor="#000000"
                     android:textSize="10dp"
+
+                    android:backgroundTint="#FF6700"
+
+                    android:layout_width="80dp"
+                    android:layout_height="40dp"
+
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toTopOf="@id/date_input" />
+                    app:layout_constraintTop_toTopOf="@id/date_input"
+
+                    android:layout_marginEnd="10dp" />
 
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/result_list"
+
+                    android:background="@drawable/box_green"
+
                     android:layout_width="0dp"
                     android:layout_height="150dp"
-                    android:layout_marginTop="5dp"
-                    android:layout_marginEnd="10dp"
-                    android:layout_marginBottom="10dp"
-                    android:background="@drawable/box_green"
+
                     app:layout_constraintBottom_toBottomOf="@+id/constraint_layout2"
                     app:layout_constraintEnd_toEndOf="@+id/constraint_layout2"
                     app:layout_constraintStart_toStartOf="@id/date_input"
-                    app:layout_constraintTop_toBottomOf="@id/date_input" />
+                    app:layout_constraintTop_toBottomOf="@id/date_input"
+
+                    android:layout_marginTop="5dp"
+                    android:layout_marginEnd="10dp"
+                    android:layout_marginBottom="10dp"/>
 
             </androidx.constraintlayout.widget.ConstraintLayout>
         </androidx.constraintlayout.widget.ConstraintLayout>
@@ -189,11 +214,12 @@
 
     <include
         layout="@layout/menu_bar"
+
         android:layout_width="match_parent"
         android:layout_height="70dp"
+
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
