--- a/app/src/main/res/layout/activity_settings_page.xml
+++ b/app/src/main/res/layout/activity_settings_page.xml
@@ -2,13 +2,16 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+
     tools:context=".SettingsPageActivity">
 
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="0dp"
+
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -20,221 +23,209 @@
 
             <TextView
                 android:id="@+id/settings_info"
+                android:text="Information"
 
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
 
-                android:layout_marginStart="30dp"
-                android:layout_marginTop="15dp"
-
-                android:text="Information"
                 app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/settings_about_us"
 
-                app:layout_constraintTop_toBottomOf="@id/settings_about_us" />
+                android:layout_marginStart="30dp"
+                android:layout_marginTop="15dp"/>
 
             <TextView
                 android:id="@+id/settings_share"
+                android:text="Share"
 
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
 
-                android:layout_marginStart="30dp"
-                android:layout_marginTop="15dp"
-
-                android:text="Share"
                 app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/settings_rate"
 
-                app:layout_constraintTop_toBottomOf="@id/settings_rate" />
+                android:layout_marginStart="30dp"
+                android:layout_marginTop="15dp" />
 
             <TextView
                 android:id="@+id/settings_password"
+                android:text="Change Password"
 
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
 
-                android:layout_marginStart="30dp"
-                android:layout_marginTop="15dp"
-
-                android:text="Change Password"
                 app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/settings_email"
 
-                app:layout_constraintTop_toBottomOf="@id/settings_email" />
+                android:layout_marginStart="30dp"
+                android:layout_marginTop="15dp" />
 
             <TextView
                 android:id="@+id/radius"
-                android:layout_width="wrap_content"
-
-                android:layout_height="wrap_content"
-                android:layout_marginStart="30dp"
-
                 android:text="1"
-                app:layout_constraintStart_toEndOf="@id/radiusBar"
 
-                app:layout_constraintTop_toTopOf="@id/radiusBar" />
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+
+                app:layout_constraintStart_toEndOf="@id/radiusBar"
+                app:layout_constraintTop_toTopOf="@id/radiusBar"
+
+                android:layout_marginStart="30dp" />
 
             <TextView
                 android:id="@+id/settings_rate"
+                android:text="Rate Us"
 
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
 
-                android:layout_marginStart="30dp"
-                android:layout_marginTop="15dp"
-
-                android:text="Rate Us"
                 app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/settings_help"
 
-                app:layout_constraintTop_toBottomOf="@id/settings_help" />
+                android:layout_marginStart="30dp"
+                android:layout_marginTop="15dp" />
 
             <TextView
                 android:id="@+id/settings_help"
+                android:text="Help &amp; Support"
 
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
 
-                android:layout_marginStart="30dp"
-                android:layout_marginTop="15dp"
-
-                android:text="Help &amp; Support"
                 app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/settings_info"
 
-                app:layout_constraintTop_toBottomOf="@id/settings_info" />
+                android:layout_marginStart="30dp"
+                android:layout_marginTop="15dp" />
 
             <SeekBar
                 android:id="@+id/radiusBar"
+
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
 
-                android:layout_marginStart="30dp"
-                android:layout_marginTop="15dp"
-
                 app:layout_constraintEnd_toEndOf="@id/settings_notification_radius"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/settings_notification_radius" />
+                app:layout_constraintTop_toBottomOf="@id/settings_notification_radius"
+
+                android:layout_marginStart="30dp"
+                android:layout_marginTop="15dp" />
 
             <Button
                 android:id="@+id/button_delete_account"
+                android:text="Delete Account"
 
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
 
-                android:layout_marginStart="10dp"
-                android:layout_marginTop="10dp"
-
-                android:text="Delete Account"
                 app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/button_log_out"
 
-                app:layout_constraintTop_toBottomOf="@id/button_log_out" />
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="10dp" />
 
             <Button
                 android:id="@+id/button_log_out"
+                android:text="Log out"
 
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
 
-                android:layout_marginStart="10dp"
-                android:layout_marginTop="30dp"
-
-                android:text="Log out"
                 app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/guide_director"
 
-                app:layout_constraintTop_toBottomOf="@id/guide_director" />
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="30dp" />
 
             <TextView
                 android:id="@+id/title_account_settings"
+                android:text="Account Settings"
 
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
 
-                android:layout_marginStart="20dp"
-                android:layout_marginTop="30dp"
-
-                android:text="Account Settings"
                 app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
 
-                app:layout_constraintTop_toTopOf="parent" />
+                android:layout_marginStart="20dp"
+                android:layout_marginTop="30dp" />
 
             <TextView
                 android:id="@+id/guide_director"
+                android:text="How to Use"
 
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
 
-                android:layout_marginStart="10dp"
-                android:layout_marginTop="30dp"
-
-                android:text="How to Use"
                 app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/settings_share"
 
-                app:layout_constraintTop_toBottomOf="@id/settings_share" />
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="30dp" />
 
             <TextView
                 android:id="@+id/settings_username"
+                android:text="Change Username"
 
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
 
-                android:layout_marginStart="30dp"
-                android:layout_marginTop="15dp"
-
-                android:text="Change Username"
                 app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/title_account_settings"
 
-                app:layout_constraintTop_toBottomOf="@id/title_account_settings" />
+                android:layout_marginStart="30dp"
+                android:layout_marginTop="15dp" />
 
             <TextView
                 android:id="@+id/settings_about_us"
+                android:text="About Us"
 
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
 
-                android:layout_marginStart="20dp"
-                android:layout_marginTop="30dp"
-
-                android:text="About Us"
                 app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/radiusBar"
 
-                app:layout_constraintTop_toBottomOf="@id/radiusBar" />
+                android:layout_marginStart="20dp"
+                android:layout_marginTop="30dp" />
 
             <TextView
                 android:id="@+id/settings_email"
+                android:text="Change E-mail"
 
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
 
-                android:layout_marginStart="30dp"
-                android:layout_marginTop="15dp"
-
-                android:text="Change E-mail"
                 app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/settings_username"
 
-                app:layout_constraintTop_toBottomOf="@id/settings_username" />
+                android:layout_marginStart="30dp"
+                android:layout_marginTop="15dp" />
 
             <TextView
                 android:id="@+id/km"
-                android:layout_width="wrap_content"
-
-                android:layout_height="wrap_content"
-                android:layout_marginStart="5dp"
-
                 android:text="km"
-                app:layout_constraintStart_toEndOf="@id/radius"
 
-                app:layout_constraintTop_toTopOf="@id/radius" />
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+
+                app:layout_constraintStart_toEndOf="@id/radius"
+                app:layout_constraintTop_toTopOf="@id/radius"
+
+                android:layout_marginStart="5dp" />
 
             <TextView
                 android:id="@+id/settings_notification_radius"
+                android:text="Change Notification Radius"
 
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
 
-                android:layout_marginStart="30dp"
-                android:layout_marginTop="15dp"
-
-                android:text="Change Notification Radius"
                 app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/settings_password"
 
-                app:layout_constraintTop_toBottomOf="@id/settings_password" />
+                android:layout_marginStart="30dp"
+                android:layout_marginTop="15dp" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
