--- a/app/src/main/res/layout/activity_sign_up_page.xml
+++ b/app/src/main/res/layout/activity_sign_up_page.xml
@@ -2,13 +2,16 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+
     tools:context=".SignUpPageActivity">
 
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="0dp"
+
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -20,164 +23,160 @@
 
             <TextView
                 android:id="@+id/username"
-
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-
-                android:layout_marginStart="20dp"
-                android:layout_marginTop="80dp"
-
                 android:text="Username"
                 android:textSize="20sp"
 
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toTopOf="parent"
+
+                android:layout_marginStart="20dp"
+                android:layout_marginTop="80dp" />
 
             <EditText
                 android:id="@+id/input_username"
+                android:ems="10"
+                android:inputType="textPersonName"
 
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
 
-                android:layout_marginTop="8dp"
-                android:ems="10"
-                android:inputType="textPersonName"
-
                 app:layout_constraintStart_toStartOf="@+id/username"
-                app:layout_constraintTop_toBottomOf="@+id/username" />
+                app:layout_constraintTop_toBottomOf="@+id/username"
+
+                android:layout_marginTop="8dp"/>
 
             <TextView
                 android:id="@+id/email"
+                android:text="E-mail"
+                android:textSize="20sp"
 
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
 
-                android:layout_marginTop="16dp"
-
-                android:text="E-mail"
-
-                android:textSize="20sp"
-
                 app:layout_constraintStart_toStartOf="@+id/input_username"
-                app:layout_constraintTop_toBottomOf="@+id/input_username" />
+                app:layout_constraintTop_toBottomOf="@+id/input_username"
+
+                android:layout_marginTop="16dp" />
 
             <EditText
                 android:id="@+id/input_email"
-
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-
-                android:layout_marginTop="8dp"
                 android:ems="10"
                 android:inputType="textPersonName"
 
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+
                 app:layout_constraintStart_toStartOf="@+id/email"
-                app:layout_constraintTop_toBottomOf="@+id/email" />
+                app:layout_constraintTop_toBottomOf="@+id/email"
+
+                android:layout_marginTop="8dp" />
 
             <TextView
                 android:id="@+id/password"
-
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-
-                android:layout_marginTop="16dp"
                 android:text="Password"
                 android:textSize="20sp"
 
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+
                 app:layout_constraintStart_toStartOf="@+id/input_email"
-                app:layout_constraintTop_toBottomOf="@+id/input_email" />
+                app:layout_constraintTop_toBottomOf="@+id/input_email"
+
+                android:layout_marginTop="16dp" />
 
             <EditText
                 android:id="@+id/password_input"
-
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-
-                android:layout_marginTop="8dp"
                 android:ems="10"
                 android:inputType="textPassword"
 
-                app:layout_constraintStart_toStartOf="@+id/password"
-                app:layout_constraintTop_toBottomOf="@+id/password" />
-            <TextView
-                android:id="@+id/password_confirm"
-
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
 
-                android:layout_marginTop="16dp"
+                app:layout_constraintStart_toStartOf="@+id/password"
+                app:layout_constraintTop_toBottomOf="@+id/password"
+
+                android:layout_marginTop="8dp" />
+            <TextView
+                android:id="@+id/password_confirm"
                 android:text="Confirm Password"
                 android:textSize="20sp"
 
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+
                 app:layout_constraintStart_toStartOf="@+id/password_input"
-                app:layout_constraintTop_toBottomOf="@+id/password_input" />
+                app:layout_constraintTop_toBottomOf="@+id/password_input"
+
+                android:layout_marginTop="16dp" />
 
             <EditText
                 android:id="@+id/password_confirm_input"
-
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-
-                android:layout_marginTop="8dp"
                 android:ems="10"
                 android:inputType="textPassword"
 
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+
                 app:layout_constraintStart_toStartOf="@+id/password_confirm"
-                app:layout_constraintTop_toBottomOf="@+id/password_confirm" />
+                app:layout_constraintTop_toBottomOf="@+id/password_confirm"
+
+                android:layout_marginTop="8dp" />
 
             <Button
                 android:id="@+id/button_sign_up"
-
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-
-                android:layout_marginTop="8dp"
-                android:layout_marginEnd="20dp"
-
                 android:text="Sign up"
                 android:textSize="16sp"
 
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/password_confirm_input" />
+                app:layout_constraintTop_toBottomOf="@id/password_confirm_input"
+
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="20dp" />
 
             <TextView
                 android:id="@+id/signup_1"
-
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
                 android:text="Are you having trouble?"
                 android:textSize="16sp"
 
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/button_sign_up" />
+                app:layout_constraintTop_toBottomOf="@id/button_sign_up"
+
+                android:layout_marginTop="10dp" />
 
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/signup_1">
 
-
                 <TextView
                     android:id="@+id/signup_2"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-
-
                     android:text="Check out our guide "
-                    android:textSize="16sp" />
+                    android:textSize="16sp"
+
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
 
                 <TextView
                     android:id="@+id/signup_3"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-
                     android:text="here."
                     android:textColor="#002F61"
-                    android:textSize="16sp" />
+                    android:textSize="16sp"
+
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
 
             </LinearLayout>
         </androidx.constraintlayout.widget.ConstraintLayout>
