--- a/app/src/main/res/layout/single_article.xml
+++ b/app/src/main/res/layout/single_article.xml
@@ -8,37 +8,45 @@
 
     <TextView
         android:id="@+id/txtTitle"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
         android:clickable="true"
         android:text="TextView"
         android:textSize="24dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginEnd="20dp"
-        android:layout_marginStart="20dp"
+
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+
         app:layout_constraintBottom_toTopOf="@+id/txtAuthors"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginStart="20dp" />
 
     <TextView
         android:id="@+id/txtAuthors"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
         android:text="TextView"
         android:textSize="20dp"
-        android:layout_marginBottom="10dp"
+
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+
         app:layout_constraintEnd_toStartOf="@id/txtDate"
         app:layout_constraintStart_toStartOf="@id/txtTitle"
         app:layout_constraintTop_toBottomOf="@+id/txtTitle"
-        app:layout_constraintBottom_toBottomOf="parent"/>
+        app:layout_constraintBottom_toBottomOf="parent"
+
+        android:layout_marginBottom="10dp" />
 
     <TextView
         android:id="@+id/txtDate"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
         android:text="TextView"
         android:textSize="20dp"
+
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+
         app:layout_constraintEnd_toEndOf="@id/txtTitle"
         app:layout_constraintTop_toBottomOf="@id/txtTitle" />
 </androidx.constraintlayout.widget.ConstraintLayout>
