--- a/app/src/main/res/layout/single_friend.xml
+++ b/app/src/main/res/layout/single_friend.xml
@@ -3,33 +3,48 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:background="@drawable/box">
 
     <ImageView
         android:id="@+id/avatar"
+        app:srcCompat="@drawable/ic_android_friends"
+
         android:layout_width="wrap_content"
         android:layout_height="0dp"
+
         app:layout_constraintBottom_toBottomOf="@+id/single_friend_name"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/single_friend_name"
-        app:srcCompat="@drawable/ic_android_friends" />
+
+        android:layout_marginStart="20dp" />
 
     <TextView
         android:id="@+id/single_friend_name"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
         android:text="TextView"
         android:textSize="34sp"
+
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+
         app:layout_constraintEnd_toStartOf="@+id/added_or_not"
         app:layout_constraintStart_toEndOf="@+id/avatar"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"/>
 
     <ImageButton
         android:id="@+id/added_or_not"
+        app:srcCompat="@android:drawable/checkbox_on_background"
+
         android:layout_width="wrap_content"
         android:layout_height="0dp"
+
         app:layout_constraintBottom_toBottomOf="@+id/single_friend_name"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@+id/single_friend_name"
-        app:srcCompat="@android:drawable/checkbox_on_background" />
+
+        android:layout_marginEnd="20dp" />
 </androidx.constraintlayout.widget.ConstraintLayout>
