--- a/app/src/main/res/layout/activity_friends_page.xml
+++ b/app/src/main/res/layout/activity_friends_page.xml
@@ -41,7 +41,7 @@
                 app:layout_constraintEnd_toEndOf="parent"/>
 
             <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/friend_list"
+                android:id="@+id/county_list"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:background="@drawable/box_green"
