--- a/app/src/main/res/layout/activity_settings_page.xml
+++ b/app/src/main/res/layout/activity_settings_page.xml
@@ -104,12 +104,13 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
 
-                app:layout_constraintEnd_toEndOf="@id/settings_notification_radius"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/settings_notification_radius"
-
                 android:layout_marginStart="30dp"
-                android:layout_marginTop="15dp" />
+                android:layout_marginTop="16dp"
+                app:layout_constraintEnd_toEndOf="@id/settings_notification_radius"
+
+                app:layout_constraintHorizontal_bias="1.0"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/settings_notification_radius" />
 
             <Button
                 android:id="@+id/button_delete_account"
