--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,8 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="colorPrimary">#BD0924</color>
+    <color name="colorPrimaryDark">#18C018</color>
+    <color name="colorAccent">#C2BDBF</color>
+    <color name="colorBlack">#000000</color>
 </resources>
