"Page titles and action bars are renewed"

--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -17,7 +17,7 @@
     <fragment
         android:id="@+id/navigation_home"
         android:name="WildfireAnalysisAndPredictionSystem.test2.ui.HomeFragment"
-        android:label="Home"
+        android:label="Wildfire System"
         tools:layout="@layout/fragment_main_menu" />
     <fragment
         android:id="@+id/navigation_friends"
