--- a/app/src/main/res/layout/fragment_fire_search.xml
+++ b/app/src/main/res/layout/fragment_fire_search.xml
@@ -73,7 +73,7 @@
                     android:layout_marginStart="10dp"/>
 
                 <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/county_list"
+                    android:id="@+id/firends_list"
 
 
                     android:layout_width="0dp"
